[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinpulse"
version = "1.0.2"
description = "High-performance, asynchronous PIN brute-force tool with a real-time progress bar"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["security", "brute-force", "asyncio", "pentesting", "pin-cracker", "network-security"]
authors = [
    { name = "fr0stb1rd" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp",
    "tqdm",
]

[project.scripts]
pinpulse = "pinpulse.__main__:main"

[project.urls]
Homepage = "https://github.com/fr0stb1rd/PinPulse"
Issues = "https://github.com/fr0stb1rd/PinPulse/issues"